pkg/lsp/testdata/ub/diagnostics/invalid/unknown-input.ub
factory: {
  outputs: {
    missing: { value: input.missing }
  }
}
